[package]
name = "speedy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client-1"

[[bin]]
name = "server-1"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.1"
clap = { version = "4.5.54", features = ["derive"] }
clap_derive = "4.5.40"
nom = "8.0.0"
rand = "0.9.2"
ring = "0.17.14"
rustls = "0.23.35"
serde = { version = "1.0.228", features = ["derive"] }
socket2 = "0.6.1"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
